解决播放延迟高的问题
- 优化音频播放缓冲机制
- 重构 QML 控件(ProcessSlider, ControlBar, VolumeSlider)
- 修复播放器界面背景色问题
- 更新 .gitignore 排除构建目录和临时文件

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 build/
 cmake-build-*/
 install/
+*-build-*/
+ffmpeg_music_player-build-*/
 
 # Visual Studio
 .vs/
@@ -12,7 +14,12 @@ install/
 
 # Qt
 *.pro.user
+*.pro.user.*
 *.autosave
+*.user
+*.user.*
+CMakeLists.txt.user
+CMakeLists.txt.user.*
 moc_*.cpp
 qrc_*.cpp
 ui_*.h
