feat: 完成QML现代化改造和项目文档更新
- 新增桌面歌词QML组件(DeskLyric.qml)，支持透明背景和鼠标交互
- 新增歌词显示QML组件(LyricDisplay.qml)，支持点击定位和拖拽搜索
- 新增播放界面QML组件(PlayWidget.qml)和旋转唱片组件(RotatingCircle.qml)
- 完善按钮状态同步机制，解决桌面歌词关闭后按钮状态不同步问题
- 新增Go后端服务器(GoTest/)，提供音乐数据API和用户管理功能
- 更新README.md，提供完整的项目介绍、环境配置和部署指南
- 新增运行截图展示(showImage/)，包含主界面、播放页面、桌面歌词等
- 完善CMakeLists.txt配置，支持Qt5/Qt6自动检测和跨平台编译

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,8 @@ set(PROJECT_TRANSLATIONS
 add_executable(${PROJECT_NAME}
     ${PROJECT_SOURCES}
     ${PROJECT_RESOURCES}
+    lyricdisplay_qml.h
+    desklrc_qml.h
 )
 
 # Qt5 翻译
